--- a/styles/login.css
+++ b/styles/login.css
@@ -41,7 +41,7 @@ body {
 }
 
 .login__title {
-  font-size: var(--titulo1);
+  font-size: var(--titulo2);
   font-weight: 600;
   line-height: 1.5;
   letter-spacing: 0.1rem;
@@ -57,6 +57,8 @@ body {
 .login__form-group {
   width: 100%;
   margin-bottom: 1.6rem;
+  position: relative;
+  display: inline-block;
 }
 
 .login__input {
@@ -68,6 +70,18 @@ body {
   color: var(--antique-white);
   font-size: var(--normal);
   outline: none;
+
+  padding-right: 4rem;
+}
+
+.icon {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 2.4rem;
+  height: 2.4rem;
+  pointer-events: none;
 }
 
 .login__link {
@@ -122,4 +136,11 @@ body {
 .button-create:active {
   border: 3px solid var(--lightBlue);
   transform: scale(0.98);
+}
+
+/*------Media queries------*/
+@media (min-width: 760px) {
+  .login {
+    max-width: 76rem;
+  }
 }
