--- a/styles/index.css
+++ b/styles/index.css
@@ -60,6 +60,84 @@ body {
   height: 85vh;
 }
 
+.main__section {
+}
+
+.request {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: inherit;
+  margin-bottom: 1.6rem;
+}
+
+.request__info {
+  background-color: var(--antique-white);
+  padding: 1rem;
+  border-radius: 1rem;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  outline: 4px solid var(--red);
+
+  box-shadow: 1px 1px 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.request__info-details {
+  width: 80%;
+}
+
+.request__info-checkbox {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  accent-color: #4caf50;
+}
+
+.request__actions {
+  text-align: center;
+}
+
+.request__action-icon {
+  width: 3.5rem;
+  transition: transform 0.2s ease, filter 0.2s ease;
+}
+
+.request__action-icon:hover {
+  transform: scale(1.1);
+}
+
+.request__action-icon:active {
+  transform: scale(0.9);
+  filter: brightness(0.8);
+  transition: transform 0.1s ease, filter 0.1s ease;
+}
+
+.request__text {
+  color: var(--gray);
+  font-size: var(--small);
+  letter-spacing: 0.1rem;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.request__text-area {
+  font-weight: bold;
+  color: var(--black);
+  font-size: var(--normal);
+}
+
+.request__info-validation {
+  text-align: center;
+}
+
+.request__info-validation-icon {
+  color: green;
+  font-size: var(--smaller);
+}
+
 .navbar {
   padding: 1rem;
   width: 100vw;
